# hepex-analysisops-agents

./: .gitignore  .gitmodules  AGENTS.md  Dockerfile  README.md  build_docker.sh  generate_prompt_writing_prompt.py  pyproject.toml  run_docker.sh  test.py  test.sh
.github/workflows/: test-and-publish.yml
src/: agent.py  executor.py  messenger.py  server.py
src/.adk/: session.db
src/tools/: data_tools.py  fitting_tools.py  physics_tools.py  root_tools.py
src/tools/.adk/: session.db
tests/: conftest.py  test_agent.py  test_e2e_green_white.py  test_e2e_green_white_hbb.py  test_green_to_white_integration.py  test_tool_calling.py
